# handlers/author.go
@@ -1,6 +1,7 @@
 package handlers
 
 import (
+	"fmt"
 	"net/http"
 
 	"project6/models"
@@ -53,12 +54,30 @@ func (h *HandlerImpl) GetAuthorList(c *gin.Context) {
 	})
 }
 
+// ShowAccount GetAuthorByID
+// @ID           get-author_by_id
+// @Summary      Get an author
+// @Description  Delete an author based on given id
+// @Tags         author
+// @Accept       json
+// @Produce      json
+// @Param id path string true "id"
+// @Success      201      {object}  models.DefaultResponse     "Success Response"
+// @Success      400      {object}  models.DefaultResponse     "Bad Request Response"
+// @Success      500      {object}  models.DefaultResponse     "Internal Server Error Response"
+// @Router       /authors/{id} [GET]
 func (h *HandlerImpl) GetAuthorByID(c *gin.Context) {
 	id := c.Param("id")
-	// TODO - get an author by ID
+	resp, err := h.strg.Author().GetAuthorByID(id)
+	fmt.Println(resp)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
 	c.JSON(http.StatusOK, gin.H{
 		"message": "GetAuthorByID",
-		"id":      id,
+		"Author":  resp,
 	})
 }
 
@@ -96,8 +115,20 @@ func (h *HandlerImpl) CreateAuthor(c *gin.Context) {
 	})
 }
 
+// ShowAccount UpdateAuthor
+// @ID           update-author
+// @Summary      Update an author
+// @Description  Update an author based on given body
+// @Tags         author
+// @Accept       json
+// @Produce      json
+// @Param        author  body      models.UpdateAuthorModel  true  "author body"
+// @Success      201     {object}  models.DefaultResponse    "Success Response"
+// @Success      400     {object}  models.DefaultResponse    "Bad Request Response"
+// @Success      500     {object}  models.DefaultResponse    "Internal Server Error Response"
+// @Router       /authors [PUT]
 func (h *HandlerImpl) UpdateAuthor(c *gin.Context) {
-	var data models.Author
+	var data models.UpdateAuthorModel
 	if err := c.ShouldBindJSON(&data); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
@@ -115,10 +146,26 @@ func (h *HandlerImpl) UpdateAuthor(c *gin.Context) {
 	})
 }
 
+// ShowAccount DeleteAuthor
+// @ID           delete-author
+// @Summary      Delete an author
+// @Description  Delete an author based on given id
+// @Tags         author
+// @Accept       json
+// @Produce      json
+// @Param id path string true "id"
+// @Success      201      {object}  models.DefaultResponse     "Success Response"
+// @Success      400      {object}  models.DefaultResponse     "Bad Request Response"
+// @Success      500      {object}  models.DefaultResponse     "Internal Server Error Response"
+// @Router       /authors/{id} [DELETE]
 func (h *HandlerImpl) DeleteAuthor(c *gin.Context) {
 	id := c.Param("id")
 
-	// TODO - delete an author by ID
+	err := h.strg.Author().DeleteAuthor(id)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
 
 	c.JSON(http.StatusOK, gin.H{
 		"message": "DeleteAuthor",
